Fixed squishy color bubble (#358)
Fixed squishy color bubble

The bubble was getting squished on smaller screens because of flex-shrink. Changed flex-shrink to 0.

Reviewed-on: https://kolaente.dev/vikunja/frontend/pulls/358
Co-Committed-By: profi248 <kostal.david8@gmail.com>

--- a/src/styles/components/tasks.scss
+++ b/src/styles/components/tasks.scss
@@ -54,8 +54,8 @@
     }
 
     .color-bubble {
-      width: 11px;
       height: 10px;
+      flex: 1 0 10px;
     }
 
     .tag {
